# Hotel-Management-Feature-

./: CMakeLists.txt  ServiceMenu.txt  System.c  System.h  main.c
database/: dateWork.txt  orderService.txt  room.txt  service.txt  users.txt
guide/: OrderCommand.txt  OrderRoom.txt  OrderService.txt  ROOM.txt  SERVICE.txt  ShowService.txt  Staff.txt  System.txt  USER.txt  UpdateDateWork.txt  UpdateUserData.txt
src/cli/: OrderCommand.c  OrderRoomCommand.c  OrderServiceCommand.c  OrderServiceCommand.h  RoomCommand.c  RoomCommand.h  ServiceCLI.c  ServiceCLI.h  ServiceCommand.c  ServiceCommand.h  StaffCommand.c  StaffCommand.h  UserCommand.c
src/core/: Order.database.h  OrderRoom.c  OrderRoom.h  OrderService.c  OrderService.h  Room.database.c  Room.database.h  Service.database.c  Service.database.h  Staff.database.c  Staff.database.h  User.database.c  User.database.h
src/utils/: Date.c  Date.h  ShowUserOrder.c  ShowUserOrder.h  readFromFile.c  readFromFile.h
